update install scripts